Added Navbar Base

--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Summentertainer</title>
-        <!-- Required meta tags -->
+        <link rel="stylesheet" href="Style.css">
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -21,8 +21,27 @@
     <body>
         <header>
             <!-- place navbar here -->
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Index.html">Index</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="Vacation.html">Vacation</a>
+                      </li>
+                  </div>
+                </div>
+              </nav>
         </header>
-        <main></main>
+        <main><H1>Hello Again World</H1>
+        <div class="container-fluid"
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
