--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
         />
     </head>
 
-    <body>
+    <body class="homepage">
         <header>
             <!-- place navbar here -->
             <nav class="navbar navbar-expand-lg bg-light">
@@ -40,7 +40,23 @@
               </nav>
         </header>
         <main><H1>Hello Again World</H1>
-        <div class="container-fluid"
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <img src="IMGS\we're-Barack.webp" class="fluid" width="60%">
+            </div>
+          </div>
+        </div>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <p>I am Excited to get back into the web design pathway program</p>
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6">
+                <img src="IMGS\cool-emoticon.png" alt="cool-emoticon">
+                </div>
+                </div>
+                </div>
         </main>
         <footer>
             <!-- place footer here -->
