--- a/Vacation.html
+++ b/Vacation.html
@@ -18,7 +18,7 @@
         />
     </head>
 
-    <body>
+    <body class="Vacation">
         <header>
             <!-- place navbar here -->
             <nav class="navbar navbar-expand-lg bg-light">
@@ -39,7 +39,7 @@
                 </div>
               </nav>
         </header>
-        <main><H1>Hello Again World</H1></main>
+        <main><H1>PHEONIX ARIZONA</H1></main>
         <footer>
             <!-- place footer here -->
         </footer>
