--- a/Index.html
+++ b/Index.html
@@ -40,26 +40,68 @@
               </nav>
         </header>
         <main><H1>Hello Again World</H1>
+          <h2>It's been a while since I've practiced coding, </h2>
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-              <img src="IMGS\we're-Barack.webp" class="fluid" width="60%">
+              <img src="IMGS\we're-Barack.webp" class="fluid" width="40%">
             </div>
           </div>
         </div>
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
-              <p>I am Excited to get back into the web design pathway program</p>
+              <p>.-.</p>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <img src="IMGS\cool-emoticon.png" alt="cool-emoticon">
                 </div>
                 </div>
                 </div>
+                <h1>Activities I've Done Over The Summer</h1>
+
+                <hr>
+                <div class="container-fluid">
+                  <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-3">
+                  <div class="card">
+                    <img src="natural-hot-springs.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Thingamabob 1</h5>
+                      <p class="card-text">.</p>
+                      <a href="_" class="btn btn-primary">Thingy</a>
+                    </div>
+                  </div> 
+                  </div>
+                
+                <div class="col-lg-3 col-md-6 col-sm-3">
+                  <div class="card">
+                    <img src="IMGS/Jummbox-logo.webp" class="card-img-top" alt="Jummbox-logo">
+                    <div class="card-body">
+                      <h5 class="card-title">Music Making In Jummbox</h5>
+                      <p class="card-text"></p>
+                      <a href="_" class="btn btn-primary">Thingy</a>
+                    </div>
+                  </div> 
+                  </div>
+                
+                <div class="col-lg-3 col-md-6 col-sm-3">
+                  <div class="card">
+                    <img src="wide_700.jpg" class="card-img-top" alt="CR">
+                    <div class="card-body">
+                      <h5 class="card-title">Thingamabob 3</h5>
+                      <p class="card-text">.</p>
+                      <a href="_" class="btn btn-primary">Thingy</a>
+                    </div>
+                  </div> 
+                  </div>
+              </div>
+              </div>
+
+
         </main>
         <footer>
-            <!-- place footer here -->
+            <h1>Contact info Here: 1111</h1>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
