--- a/Vacation.html
+++ b/Vacation.html
@@ -1,8 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Summentertainer</title>
+        <title>Vacation</title>
         <link rel="stylesheet" href="Style.css">
+        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://use.typekit.net/mtm4vxw.css">
+        <link rel="stylesheet" href="https://use.typekit.net/mtm4vxw.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.typekit.net/mtm4vxw.css">
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -39,7 +44,8 @@
                 </div>
               </nav>
         </header>
-        <main><H1>PHEONIX ARIZONA</H1></main>
+        <main><img src="IMGS/Pheonix, Arizona Font.png" class="fluid">
+        <h2>Ow oof hot</h2></main>
         <footer>
             <!-- place footer here -->
         </footer>
