--- a/Index.html
+++ b/Index.html
@@ -63,18 +63,18 @@
                 <hr>
                 <div class="container-fluid">
                   <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-3">
+                <div class="col-lg-4 col-md-6 col-sm-4">
                   <div class="card">
-                    <img src="natural-hot-springs.jpg" class="card-img-top" alt="...">
+                    <img src="IMGS/Martial Art Guy.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Thingamabob 1</h5>
+                      <h5 class="card-title">Martial Art</h5>
                       <p class="card-text">.</p>
                       <a href="_" class="btn btn-primary">Thingy</a>
                     </div>
                   </div> 
                   </div>
                 
-                <div class="col-lg-3 col-md-6 col-sm-3">
+                <div class="col-lg-4 col-md-6 col-sm-4">
                   <div class="card">
                     <img src="IMGS/Jummbox-logo.webp" class="card-img-top" alt="Jummbox-logo">
                     <div class="card-body">
@@ -85,11 +85,11 @@
                   </div> 
                   </div>
                 
-                <div class="col-lg-3 col-md-6 col-sm-3">
+                <div class="col-lg-4 col-md-6 col-sm-4">
                   <div class="card">
-                    <img src="wide_700.jpg" class="card-img-top" alt="CR">
+                    <img src="IMGS/Me And Kevin.png" class="card-img-top" alt="CR">
                     <div class="card-body">
-                      <h5 class="card-title">Thingamabob 3</h5>
+                      <h5 class="card-title">Friendship</h5>
                       <p class="card-text">.</p>
                       <a href="_" class="btn btn-primary">Thingy</a>
                     </div>
