--- a/Vacation.html
+++ b/Vacation.html
@@ -46,8 +46,23 @@
         </header>
         <main><img src="IMGS/Pheonix, Arizona Font.png" class="fluid">
         <h2>Ow oof hot</h2></main>
+
+
+        <hr>
+
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <p>I went to sedona and did offroading</p>
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6">
+                <img src="IMGS/Sedona.jpg" alt="Sedona">
+                </div>
+                </div>
+                </div>
+
         <footer>
-            <!-- place footer here -->
+          <h1>Contact info Here: Vcolon342@gmail.com</h1>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
