--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
-              <p>.-.</p>
+              <p>However I think I can get back into it</p>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <img src="IMGS\cool-emoticon.png" alt="cool-emoticon">
@@ -67,9 +67,9 @@
                   <div class="card">
                     <img src="IMGS/Martial Art Guy.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Martial Art</h5>
+                      <h5 class="card-title">Muay Thai</h5>
                       <p class="card-text">.</p>
-                      <a href="_" class="btn btn-primary">Thingy</a>
+                      <a href="_" class="btn btn-primary">.</a>
                     </div>
                   </div> 
                   </div>
@@ -80,7 +80,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Music Making In Jummbox</h5>
                       <p class="card-text"></p>
-                      <a href="_" class="btn btn-primary">Thingy</a>
+                      <a href="_" class="btn btn-primary">.</a>
                     </div>
                   </div> 
                   </div>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Friendship</h5>
                       <p class="card-text">.</p>
-                      <a href="_" class="btn btn-primary">Thingy</a>
+                      <a href="_" class="btn btn-primary">.</a>
                     </div>
                   </div> 
                   </div>
@@ -101,7 +101,7 @@
 
         </main>
         <footer>
-            <h1>Contact info Here: 1111</h1>
+            <h1>Contact info Here: Vcolon342@gmail.com</h1>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
