--- a/Vacation.html
+++ b/Vacation.html
@@ -56,7 +56,7 @@
               <p>I went to sedona and did offroading</p>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6">
-                <img src="IMGS/Sedona.jpg" alt="Sedona">
+                <img src="IMGS/Sedona.jpg" alt="Sedona" width="200">
                 </div>
                 </div>
                 </div>
